--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
           <button class="button-large">Read Our Menu</button>
           <div class="bottom">
             <div>
-              <img src="./assets/scrool.png" alt="bottom-logo" />
+              <img src="./scrool.png" alt="bottom-logo" />
             </div>
           </div>
         </div>
