--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <section aria-label="navbar">
         <nav class="navbar">
           <div>
-            <img src="./white-logo.png" alt="logo" class="logo" />
+            <img src="white-logo.png" alt="logo" class="logo" />
           </div>
           <div>
             <ul class="list">
